# discopt

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  ROADMAP.md  mypy.ini  pyproject.toml
.claude/commands/: benchmark-report.md  convert.md  diagnose.md  explain-model.md  formulate.md  reformulate.md
.github/workflows/: amp-integration.yml  ci.yml  docs.yml  nightly.yml  release.yml
claude-skills/: README.md  install.sh
claude-skills/commands/: convert.md  diagnose.md  discoptbot.md  explain-model.md  formulate.md  reformulate.md
crates/discopt-core/src/: amp.rs  expr.rs  lib.rs  nl_parser.rs
crates/discopt-core/tests/: presolve_determinism.rs
crates/discopt-python/: Cargo.toml
crates/discopt-python/src/: bnb_bindings.rs  expr_bindings.rs  lib.rs  ripopt_bindings.rs
discopt_benchmarks/: README.md  category_runner.py  pyproject.toml  run_benchmarks.py  run_category_benchmarks.py
discopt_benchmarks/agents/: __init__.py  lit_review.py
discopt_benchmarks/benchmarks/: __init__.py  metrics.py  runner.py
discopt_benchmarks/benchmarks/problems/: base.py  m1_regression.py  minlptests_problems.py
discopt_benchmarks/config/: benchmarks.toml
discopt_benchmarks/tests/: conftest.py  test_category_runner.py  test_chebyshev_regression.py  test_correctness.py  test_eigenvalue_arith_regression.py  test_eliminate_regression.py  test_interop.py  test_interval_ad_reverse_regression.py  test_polyhedral_oa_regression.py  test_polynomial_reformulation_regression.py  test_taylor_regression.py
discopt_benchmarks/utils/: reporting.py  statistics.py
docs/: _config.yml  _toc.yml  comparison.md  intro.md  llm_features.md  references.bib
docs/notebooks/: advanced_features.ipynb  amp_global_minlp.ipynb  batch_ipm_vs_ipopt.ipynb  benchmark_dashboard.ipynb  benchmarks_by_class.ipynb  callbacks.ipynb  convex_fast_path.ipynb  convexity_detection.ipynb  decision_focused_learning.ipynb  doe-implementation-plan.md  export_formats.ipynb  identifiability-estimability.ipynb  ipm_vs_ipopt.ipynb  llm_integration.ipynb  minlp_examples.ipynb  model-discrimination.ipynb  modeling_guide.ipynb  nlp_bb.ipynb  nn_embedding.ipynb  presolve.ipynb  problem_classes.ipynb  qp_solver.ipynb  quickstart.ipynb  robust_adjustable.ipynb  sensitivity_analysis.ipynb  solver_internals.ipynb  tutorial_batch_doe.ipynb  tutorial_dae.ipynb  tutorial_doe.ipynb  tutorial_estimation.ipynb  tutorial_gdp.ipynb  tutorial_lp.ipynb  tutorial_milp.ipynb  tutorial_minlp.ipynb  tutorial_miqp.ipynb  tutorial_multiobjective.ipynb  tutorial_oa.ipynb  tutorial_qp.ipynb  tutorial_ripopt_sipopt.ipynb  tutorial_robust.ipynb  (+5 more)
jaxminlp_benchmarks/jaxminlp_api/: __init__.py  core.py  examples.py
manuscript/: benchmark_lp_qp_speedup.ipynb  discopt.org  discopt.tex  minlplib_smoke_test.ipynb  piecewise_gap_reduction.ipynb  references.bib
notebooks/: advanced_features.ipynb  benchmarks_by_class.ipynb  decision_focused_learning.ipynb  minlp_examples.ipynb  problem_classes.ipynb  sensitivity_analysis.ipynb  solver_internals.ipynb  tutorial_gdp.ipynb
python/discopt/: __init__.py  callbacks.py  cli.py  constants.py  estimate.py  solver.py  tutor.py  warm_start.py
python/discopt/_jax/: __init__.py  _numeric.py  alphabb.py  chebyshev_model.py  cutting_planes.py  dag_compiler.py  deadline.py  differentiable.py  embedding.py  envelopes.py  gdp_advisor.py  gdp_reformulate.py  gnn_branching.py  icnn.py  icnn_trainer.py  ipm.py  ipm_iterative.py  learned_relaxations.py  lp_ipm.py  mccormick.py  mccormick_nlp.py  milp_relaxation.py  multivariate_mccormick.py  nl_evaluator.py  nl_reconstruction.py  nlp_evaluator.py  nonlinear_bound_tightening.py  oa_relax.py  obbt.py  operator_relaxations.py  partition_selection.py  pcg.py  piecewise_mccormick.py  polyhedral_oa.py  presolve_pipeline.py  problem_classifier.py  qp_ipm.py  relaxation_compiler.py  scaling.py  sparse_jacobian.py  (+3 more)
python/discopt/benchmarks/: runner.py
python/discopt/course/: .gitignore  README.md  SYLLABUS.md  __init__.py  install_skills.sh  progress.template.yaml
python/discopt/dae/: __init__.py  collocation.py  finite_difference.py  mol.py  polynomials.py
python/discopt/dev/: __init__.py  cli.py
python/discopt/doe/: __init__.py  design.py  discrimination.py  discrimination_sequential.py  estimability.py  fim.py  profile.py  selection.py  sequential.py
python/discopt/export/: __init__.py  _extract.py  gams.py  lp.py  mps.py  nl.py
python/discopt/interfaces/: cutest.py
python/discopt/llm/: __init__.py  advisor.py  chat.py  commentary.py  diagnosis.py  prompts.py  provider.py  reformulation.py  safety.py  serializer.py  (+1 more)
python/tests/: conftest.py  test_affine_decision_rule.py  test_alphabb.py  test_amp.py  test_amp_integration.py  test_batch_dispatch.py  test_batch_doe.py  test_benchmarks.py  test_callbacks.py  test_chebyshev_model.py  test_cli.py  test_cli_install_skills.py  test_cli_tutor.py  test_convex_fast_path.py  test_convexity.py  test_convexity_certificate.py  test_convexity_eigenvalue.py  test_convexity_interval.py  test_convexity_interval_ad.py  test_convexity_interval_eval.py  test_convexity_lattice.py  test_convexity_node_refresh.py  test_convexity_pathological.py  test_convexity_solver_integration.py  test_convexity_soundness.py  test_convexity_wide_box.py  test_correctness.py  test_cutting_planes.py  test_dae.py  test_dag_compiler.py  test_deadline.py  test_dev_cli.py  test_differentiable.py  test_discrimination_criteria.py  test_discrimination_examples.py  test_discrimination_sequential.py  test_eigenvalue_arith.py  test_envelopes.py  test_estimability.py  test_examiner.py  (+61 more)
reports/: baron_parity_plan.md  phase2_gate_report.md  phase3_gate_2026-02-15T10-03-47.json  reconciled_development_plan_v2.md  ripopt_bootstrap.md  t24_audit.md  t24_test_results.md  unified_publication_roadmap.md
scripts/: phase2_gate.py  phase3_gate.py  phase4_gate.py  run_cutest_comprehensive.py  run_memory_capped_pytest.sh  search_arxiv.py  search_openalex.py  write_report.py
(+182 files in other folders)
