[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "discopt"
version = "0.2.0"
description = "Hybrid MINLP solver combining Rust and JAX"
requires-python = ">=3.10"
authors = [{name = "John Kitchin"}]
license = {text = "EPL-2.0"}
readme = "README.md"
keywords = ["optimization", "MINLP", "branch-and-bound", "nonlinear", "solver", "JAX"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jkitchin/discopt"
Repository = "https://github.com/jkitchin/discopt"
Documentation = "https://github.com/jkitchin/discopt#readme"
Issues = "https://github.com/jkitchin/discopt/issues"

[project.optional-dependencies]
ipopt = ["cyipopt>=1.4"]
highs = ["highspy"]
cutest = ["pycutest>=1.8.0"]
llm = ["litellm>=1.0"]
nn = ["onnx>=1.14", "onnxruntime>=1.16"]
ml = ["scikit-learn>=1.0"]
xgboost = ["xgboost>=1.7"]
lightgbm = ["lightgbm>=4.0"]
gnn = ["equinox>=0.10", "optax>=0.1"]
learned = ["equinox>=0.10", "optax>=0.1"]
dev = ["pytest", "pytest-timeout", "pytest-cov", "ruff", "mypy", "highspy"]
all = ["discopt[ipopt,highs,cutest,llm,gnn,nn,ml]"]

[project.scripts]
discopt = "discopt.cli:main"

[tool.maturin]
manifest-path = "crates/discopt-python/Cargo.toml"
python-source = "python"
module-name = "discopt._rust"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "discopt.modeling.core"
disable_error_code = ["arg-type", "union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.dag_compiler"
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "discopt._jax.relaxation_compiler"
disable_error_code = ["misc", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.nlp_evaluator"
disable_error_code = ["misc", "no-any-return", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.solvers.nlp_ipopt"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt._jax.nl_evaluator"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt.solver"
disable_error_code = "attr-defined"

[[tool.mypy.overrides]]
module = "discopt._jax.differentiable"
disable_error_code = ["misc", "index", "return-value", "no-redef", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "discopt._jax.obbt"
disable_error_code = ["assignment", "no-redef", "arg-type", "index"]

[[tool.mypy.overrides]]
module = "discopt._jax.primal_heuristics"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "discopt.interfaces.cutest"
disable_error_code = ["no-any-return", "attr-defined", "return-value", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.benchmarks.runner"
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = "discopt._jax.ipm_callbacks"
disable_error_code = ["assignment", "misc", "union-attr", "operator", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
timeout = 300
markers = [
    "smoke: quick sanity tests",
    "slow: long-running tests",
    "gpu: requires GPU",
    "correctness: correctness validation tests",
    "cutest: requires pycutest and CUTEst installation",
]

[tool.coverage.run]
source = ["discopt"]
branch = true
omit = [
    "python/discopt/solvers/sipopt.py",
    "python/discopt/solvers/nlp_ripopt.py",
    "python/discopt/nn/readers/onnx_reader.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
